--- a/webpage.html
+++ b/webpage.html
@@ -9,12 +9,8 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </head>
   <body>
-
-      
-      
-      hello
-
-</body>
+      hello how are you today
+  </body>
 </html>
 
 
